##
# libmeas - A measurement system for critical embedded systems
#
# Copyright (C) 2009 Renê de Souza Pinto
#
# This file is part of libmeas
#
# libmeas is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# libmeas is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

# Doxygen support
include $(top_srcdir)/aminclude.am

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = doxygen.cfg patches/getjiffies-2.6.29.patch patches/getjiffies-3.0.3.patch

SUBDIRS = src tests


